Hacky solution to fix multiselect rendering on Windows. (Unsure why it worked on Linux and not Windows, when I was using Firefox on both platforms. The issue seemed to be that on Windows, the CSS was for some reason resolving the selection of a multiselect checkbox by choosing to derender the entire multiselect container. The solution was to make all of the multiselect boxes permanently rendered, but invisible and moved far to the left offscreen when not in use.)

--- a/src/util/cell.css
+++ b/src/util/cell.css
@@ -2,33 +2,44 @@
  *  Rules for Multiselect cells
  */
 .cell-multiselect {
-  display: none;
-  padding: 2px 6px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
 
-  :focus &, &:focus, &:has(:focus) {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    display: grid;
-    grid-template-columns: 1fr;
+  max-height: 550%;
+  overflow-y: auto;
+  
+  display: grid;
+  grid-template-columns: 1fr;
 
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    color: var(--text-color-neutral);
-    background-color: var(--main-color-light);
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  color: var(--text-color-neutral);
+  background-color: var(--main-color-light);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 
-    z-index: 2;
-  }
+  z-index: 2;
+}
+td:not(:focus, :has(:focus)) .cell-multiselect {
+  opacity: 0;
+  width: 0;
+  left: -100000px;
 }
 .cell-multiselect * {
   transition: background-color 0.25s;
   &:hover {
     background-color: var(--main-color-semidark);
   }
+}
+
+
+:focus {
+  background-color: red;
+  border: 3px solid darkred;
 }
